--- a/index.html
+++ b/index.html
@@ -5,8 +5,22 @@
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>BurgerKiss – POS</title>
 
-<!-- ABSOLUTE URL FIX -->
+<!-- firebase config -->
+<script>
+  window.FIREBASE_CONFIG = {
+    apiKey: "AIzaSyD1LNc1SPciD6k5GYbzimLqs0XZRf54DUs",
+    authDomain: "burgerkiss-pos.firebaseapp.com",
+    databaseURL: "https://burgerkiss-pos-default-rtdb.firebaseio.com",
+    projectId: "burgerkiss-pos",
+    storageBucket: "burgerkiss-pos.firebasestorage.app",
+    messagingSenderId: "1041746532885",
+    appId: "1:1041746532885:web:3a20041480487fb60c399c"
+  };
+</script>
+
+<!-- styles -->
 <link rel="stylesheet" href="https://burgerkiss25.github.io/burgerkiss-pos/style.css" />
+
 </head>
 <body>
 
@@ -62,6 +76,7 @@
 </div>
 
 <div class="wrap">
+
   <!-- ORDER -->
   <section id="tab-order">
     <div class="grid" id="buttons"></div>
@@ -163,7 +178,15 @@
   </div>
 </div>
 
-<!-- SCRIPTS ABSOLUTE URL -->
+<!-- firebase SDKs COMPAT -->
+<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-database-compat.js"></script>
+
+<!-- sync script (noch anlegen) -->
+<script src="https://burgerkiss25.github.io/burgerkiss-pos/sync.js"></script>
+
+<!-- APP scripts -->
 <script src="https://burgerkiss25.github.io/burgerkiss-pos/data.js"></script>
 <script src="https://burgerkiss25.github.io/burgerkiss-pos/prices.js"></script>
 <script src="https://burgerkiss25.github.io/burgerkiss-pos/state.js"></script>
@@ -173,4 +196,3 @@
 
 </body>
 </html>
-
