--- a/index.html
+++ b/index.html
@@ -6,10 +6,14 @@
   <title>BurgerKiss – POS</title>
 
   <!-- Styles -->
-  <link rel="stylesheet" href="https://burgerkiss25.github.io/burgerkiss-pos/style.css?v=8" />
+  <link rel="stylesheet" href="https://burgerkiss25.github.io/burgerkiss-pos/style.css?v=9" />
 
-  <!-- Firebase Config (dein Projekt) -->
+  <!-- App-Flags / Config -->
   <script>
+    // Sync global an/aus (bei Problemen schnell ausschalten = false)
+    window.BK_SYNC_ENABLED = true;
+
+    // Firebase: offizielles Projekt + Pfad
     window.FIREBASE_CONFIG = {
       apiKey: "AIzaSyD1LNc1SPciD6k5GYbzimLqs0XZRf54DUs",
       authDomain: "burgerkiss-pos.firebaseapp.com",
@@ -19,7 +23,7 @@
       messagingSenderId: "1041746532885",
       appId: "1:1041746532885:web:3a20041480487fb60c399c"
     };
-    // Offizieller Sync-Pfad (Variante B = nur aktiver Slot)
+    // Variante B: nur aktiver Slot
     window.BK_SYNC_PATH = "/pos/live";
   </script>
 </head>
@@ -183,12 +187,12 @@
   </div>
 
   <!-- App Scripts -->
-  <script src="https://burgerkiss25.github.io/burgerkiss-pos/data.js?v=8"></script>
-  <script src="https://burgerkiss25.github.io/burgerkiss-pos/prices.js?v=8"></script>
-  <script src="https://burgerkiss25.github.io/burgerkiss-pos/state.js?v=8"></script>
-  <script src="https://burgerkiss25.github.io/burgerkiss-pos/logic.js?v=8"></script>
-  <script src="https://burgerkiss25.github.io/burgerkiss-pos/ui.js?v=8"></script>
-  <script src="https://burgerkiss25.github.io/burgerkiss-pos/main.js?v=8"></script>
+  <script src="https://burgerkiss25.github.io/burgerkiss-pos/data.js?v=9"></script>
+  <script src="https://burgerkiss25.github.io/burgerkiss-pos/prices.js?v=9"></script>
+  <script src="https://burgerkiss25.github.io/burgerkiss-pos/state.js?v=9"></script>
+  <script src="https://burgerkiss25.github.io/burgerkiss-pos/logic.js?v=9"></script>
+  <script src="https://burgerkiss25.github.io/burgerkiss-pos/ui.js?v=9"></script>
+  <script src="https://burgerkiss25.github.io/burgerkiss-pos/main.js?v=9"></script>
 
   <!-- Firebase SDKs (Compat) -->
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
@@ -196,6 +200,6 @@
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-database-compat.js"></script>
 
   <!-- Live Sync (Variante B: nur aktiver Slot) -->
-  <script src="https://burgerkiss25.github.io/burgerkiss-pos/sync.js?v=8"></script>
+  <script src="https://burgerkiss25.github.io/burgerkiss-pos/sync.js?v=9"></script>
 </body>
 </html>
