--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
   <title>BurgerKiss – POS</title>
 
   <!-- Styles -->
-  <link rel="stylesheet" href="https://burgerkiss25.github.io/burgerkiss-pos/style.css?v=9" />
+  <link rel="stylesheet" href="https://burgerkiss25.github.io/burgerkiss-pos/style.css?v=10" />
 
   <!-- App-Flags / Config -->
   <script>
-    // Sync global an/aus (bei Problemen schnell ausschalten = false)
+    // Sync global an/aus
     window.BK_SYNC_ENABLED = true;
 
-    // Firebase: offizielles Projekt + Pfad
+    // Firebase Config + Sync-Pfad
     window.FIREBASE_CONFIG = {
       apiKey: "AIzaSyD1LNc1SPciD6k5GYbzimLqs0XZRf54DUs",
       authDomain: "burgerkiss-pos.firebaseapp.com",
@@ -23,7 +23,7 @@
       messagingSenderId: "1041746532885",
       appId: "1:1041746532885:web:3a20041480487fb60c399c"
     };
-    // Variante B: nur aktiver Slot
+    // Offizieller Pfad (Variante B = nur aktiver Slot)
     window.BK_SYNC_PATH = "/pos/live";
   </script>
 </head>
@@ -187,19 +187,19 @@
   </div>
 
   <!-- App Scripts -->
-  <script src="https://burgerkiss25.github.io/burgerkiss-pos/data.js?v=9"></script>
-  <script src="https://burgerkiss25.github.io/burgerkiss-pos/prices.js?v=9"></script>
-  <script src="https://burgerkiss25.github.io/burgerkiss-pos/state.js?v=9"></script>
-  <script src="https://burgerkiss25.github.io/burgerkiss-pos/logic.js?v=9"></script>
-  <script src="https://burgerkiss25.github.io/burgerkiss-pos/ui.js?v=9"></script>
-  <script src="https://burgerkiss25.github.io/burgerkiss-pos/main.js?v=9"></script>
+  <script src="https://burgerkiss25.github.io/burgerkiss-pos/data.js?v=10"></script>
+  <script src="https://burgerkiss25.github.io/burgerkiss-pos/prices.js?v=10"></script>
+  <script src="https://burgerkiss25.github.io/burgerkiss-pos/state.js?v=10"></script>
+  <script src="https://burgerkiss25.github.io/burgerkiss-pos/logic.js?v=10"></script>
+  <script src="https://burgerkiss25.github.io/burgerkiss-pos/ui.js?v=10"></script>
+  <script src="https://burgerkiss25.github.io/burgerkiss-pos/main.js?v=10"></script>
 
   <!-- Firebase SDKs (Compat) -->
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-database-compat.js"></script>
 
-  <!-- Live Sync (Variante B: nur aktiver Slot) -->
-  <script src="https://burgerkiss25.github.io/burgerkiss-pos/sync.js?v=9"></script>
+  <!-- Polling-basiertes Live Sync -->
+  <script src="https://burgerkiss25.github.io/burgerkiss-pos/sync_poll.js?v=10"></script>
 </body>
 </html>
