Update slot toolbar comment

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       </div>
 
       <div class="toolbar" id="slotsBar">
-        <!-- In Variante B ist der Slot fix – die Buttons sind rein informativ -->
+        <!-- Slot-Verwaltung: Trotz voreingestelltem SN1 lassen sich Slots hinzufügen, umbenennen und löschen -->
         <span class="chip" id="btnAddSlot">+ Slot</span>
         <span class="chip" id="btnRenameSlot">Rename</span>
         <span class="chip" id="btnDeleteSlot">Delete</span>
